[package]
name = "mysticeti-bench"
version = "0.1.0"
edition = "2021"
description = "Benchmarks and multi-node harness for Mysticeti"

[[bench]]
name = "core_throughput"
harness = false

[[bench]]
name = "multi_node"
harness = false

[[bench]]
name = "tps"
harness = false

[dependencies]
mysticeti-core = { path = "../mysticeti-core" }
mysticeti-net = { path = "../mysticeti-net" }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
