[package]
name = "mysticeti"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mysticeti"
path = "src/main.rs"

[dependencies]
mysticeti-core = { path = "../mysticeti-core" }
mysticeti-net = { path = "../mysticeti-net" }
iroh = "0.96"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
