[package]
name = "mysticeti"
version = "0.0.1"
edition = "2021"
description = "Mysticeti DAG consensus node and client binaries"
license = "Apache-2.0"

[[bin]]
name = "mysticeti"
path = "src/main.rs"

[[bin]]
name = "mysticeti-client"
path = "src/bin/mysticeti_client.rs"

[dependencies]
mysticeti-core = { path = "../mysticeti-core", version = "0.0.1" }
mysticeti-net = { path = "../mysticeti-net", version = "0.0.1" }
iroh = "0.96"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
